Already not complete and still mang bug

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,13 +24,13 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     // ViewModel and LiveData
     implementation 'androidx.lifecycle:lifecycle-viewmodel:2.2.0'
-    implementation "androidx.lifecycle:lifecycle-livedata:2.2.0"
-
+    implementation 'androidx.lifecycle:lifecycle-livedata:2.2.0'
     // Room
     implementation 'androidx.room:room-runtime:2.2.5'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
     annotationProcessor 'androidx.room:room-compiler:2.2.5'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
@@ -42,5 +42,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.squareup.okhttp3:okhttp:4.5.0'
     implementation 'com.google.code.gson:gson:2.3'
-
+    implementation files('libs/achartengine.jar')
 }
